<resources>
    <string name="app_name">eginbeharrekoak</string>
    <string name="agenda_title">AGENDA</string>
    <string name="eginbeharrekoak_btn">EGINBEHARREKOAK</string>
    <string name="gehitu_BTN">GEHITU</string>
    <string name="izenburua_eginbeharra">Izenburua</string>
    <string name="deskripzioa_eginbeharra">Deskripzioa</string>
    <string name="izenburuaTitle">IZENBURUA</string>
    <string name="eginbeharraren_izenburua_jarriHint">Eginbeharraren izenburua jarri</string>
    <string name="deskripzioaTitle">DESKRIPZIOA</string>
    <string name="eginbeharraren_desskripzioaText">Eginbeharraren deskripzioa…</string>
    <string name="sortuBtn">SORTU</string>
    <string name="eginbeharrakTitle">EGINBAHARRAK</string>
    <string name="button_gora">button_gora</string>
    <string name="button_behera">button_behera</string>
    <string name="eginbehar_home">Nota azkarra…</string>
    <string name="hutsik_text_view">Ez dago zereginik. Gehitu bat beheko botoiarekin! 🥳</string>
</resources>