<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_200">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/izenburuaTitle"
            android:textColor="#333"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextIzenburua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/eginbeharraren_izenburua_jarriHint"
            android:padding="12dp"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripzioaTitle"
            android:textColor="#333"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edit_text_background"
            android:gravity="top"
            android:hint="@string/eginbeharraren_desskripzioaText"
            android:minLines="3"
            android:padding="12dp"
            android:textColor="#000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSortu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:text="@string/sortuBtn"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>
