<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:text="@string/agenda_title"
            android:textColor="#000000"
            android:textSize="64sp"
            tools:text="AGENDA" />

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_egitekoak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/eginbeharrekoak_btn"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:text="EGINBEHARRAK" />

        <Button
            android:id="@+id/button_gehitu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gehitu_BTN"
            android:textColor="#000000"
            android:textSize="30sp"
            tools:text="GEHITU" />
    </LinearLayout>


</LinearLayout>